[package]
name = "minesweeper-cli"
authors = ["Alexander Bass"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
rand = "0.8.5"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
strip = true      # Strip symbols from binary*
